--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Search</a>
+                            <a class="nav-link" aria-current="page" href="">Search</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="image.html">Image</a>
@@ -44,7 +44,7 @@
                                 <input  class="btn btn-sm btn-light" type="submit" value="Google Search">
                               </div>
                               <div>
-                                <input  class="btn btn-sm btn-light" type="submit" value="I'm Feeling Lucky">
+                              <button  class="btn btn-sm btn-light"><a target="_self" href="https://www.google.com/doodles">I'm Feeling Lucky</a></button>
                               </div>
                         </div>
                       
