--- a/image.html
+++ b/image.html
@@ -18,7 +18,7 @@
                             <a class="nav-link" aria-current="page" href="index.html">Search</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Image</a>
+                            <a class="nav-link" aria-current="page" href="">Image</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="advanced.html">Advanced</a>
@@ -36,17 +36,13 @@
                 <div class="form">
                     <form class="row g-3" action="https://www.google.com/search">
                         <div class="input">
-                          <input type="text" name="q" class="form-control" placeholder="Search..." id="inputEmail4">
+                          <input type="text" name="q" class="form-control controller" placeholder="Search..." id="inputEmail4">
                         </div>
 
                          <div class="search">
-                        
-                              <div>
-                                <input hidden class="btn btn-sm bg-transparent" name="tbm" type="submit" value="vid">
-                              </div>
 
                               <div>
-                                <input  class="btn btn-sm btn-light" type="submit" value="I'm Feeling Lucky">
+                                <input hidden  name="tbm" type="submit" value="isch">
                               </div>
                         </div> 
                     
